update css styling

--- a/index.html
+++ b/index.html
@@ -9,47 +9,33 @@
   <body>
     <div class="resume">
       <div class="header">
-        <div class="name">Your Name</div>
+        <div class="name">Luke Reynolds</div>
         <div class="contact">
-          Email: your@email.com | Phone: (123) 456-7890 | LinkedIn:
-          <a class="link" href="#">linkedin.com/yourname</a>
+          Email: luke.reynolds.92@gmail.com | LinkedIn:
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/luke-reynolds-0a5349294/"
+            >Luke Reynolds' LinkedIn</a
+          >
+          | GitHub:
+          <a class="link" href="https://github.com/BigLu5"
+            >Luke Reynolds' GitHub</a
+          >
           <p class="profsumm">
-            Enthusiastic web developer specialising in front end development.
-            Solid knowledge of HTML, CSS and JavaScript, with a particular
-            passion for developing innovative UI/UX solutions. Eager to work for
-            a dynamic company committed to innovative solutions to drive
-            success.
+            I am a former geneticist 🧬 turned Developer 💻 who is passionate
+            about creating systems that solve problems. I am hoping to join an
+            innovative team that allows me to embrace challenges and contribute
+            positively to projects.
           </p>
         </div>
       </div>
-
-      <div class="section">
-        <div class="section-title">Work Experience</div>
-        <div class="section-content">
-          <div class="work-experience-item">
-            <div><strong>Position:</strong> Software Developer</div>
-            <div><strong>Company:</strong> ABC Tech Solutions</div>
-            <div><strong>Timeframe:</strong> Jan 2020 - Present</div>
-            <ul>
-              <li>
-                Developed and maintained web applications using HTML, CSS, and
-                JavaScript.
-              </li>
-              <li>
-                Collaborated with cross-functional teams to deliver projects on
-                time.
-              </li>
-              <li>
-                Implemented new features and improved application performance.
-              </li>
-            </ul>
-          </div>
-          <!-- Add more work experience items as needed -->
+      <div
+        class="section"
+        style="background-color: #e3edf7; border-radius: 15px; padding: 40px"
+      >
+        <div class="section-title personal-projects-title">
+          Personal Projects
         </div>
-      </div>
-
-      <div class="section">
-        <div class="section-title">Personal Projects</div>
         <div class="section-content">
           <div class="project-item">
             <div><strong>Name:</strong> Project 1</div>
@@ -65,16 +51,41 @@
           <!-- Add more project items as needed -->
         </div>
       </div>
-
-      <div class="section">
-        <div class="section-title">Education</div>
-        <div class="section-content">
-          <div><strong>University:</strong> Your University</div>
-          <div>
-            <strong>Degree:</strong> Bachelor of Science in Computer Science
+      <div class="container">
+        <div class="section">
+          <div class="section-title">Work Experience</div>
+          <div class="section-content">
+            <div class="work-experience-item">
+              <div><strong>Position:</strong> Software Developer</div>
+              <div><strong>Company:</strong> ABC Tech Solutions</div>
+              <div><strong>Timeframe:</strong> Jan 2020 - Present</div>
+              <ul>
+                <li>
+                  Developed and maintained web applications using HTML, CSS, and
+                  JavaScript.
+                </li>
+                <li>
+                  Collaborated with cross-functional teams to deliver projects
+                  on time.
+                </li>
+                <li>
+                  Implemented new features and improved application performance.
+                </li>
+              </ul>
+            </div>
+            <!-- Add more work experience items as needed -->
           </div>
-          <div><strong>Result:</strong> GPA: 3.8</div>
-          <div><strong>Dates:</strong> Aug 2016 - May 2020</div>
+        </div>
+        <div class="section">
+          <div class="section-title">Education</div>
+          <div class="section-content">
+            <div>
+              <strong>University:</strong> Liverpool John Moores University
+            </div>
+            <div><strong>Degree:</strong> Bachelor of Science in Biology</div>
+            <div><strong>Result:</strong> First Class</div>
+            <div><strong>Dates:</strong> Sep 2011 - July 2014</div>
+          </div>
         </div>
       </div>
 
