update header links

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
           <a
             class="link"
             href="https://www.linkedin.com/in/luke-reynolds-0a5349294/"
-            >Luke Reynolds' LinkedIn</a
+            >Luke's LinkedIn</a
           >
           | GitHub:
-          <a class="link" href="https://github.com/BigLu5"
-            >Luke Reynolds' GitHub</a
-          >
+          <a class="link" href="https://github.com/BigLu5">Luke's GitHub</a>
           <p class="profsumm">
             I am a former geneticist 🧬 turned Developer 💻 who is passionate
             about creating systems that solve problems. I am hoping to join an
